week-11/infra/ingress/envoy/envoy.yaml
node:
  id: node-1
  cluster: local-edge

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:

  listeners:
    - name: http_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend_services
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: springboot_service

                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:

    # -----------------------------
    # Spring Boot backend service
    # -----------------------------
    - name: springboot_service
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN

      load_assignment:
        cluster_name: springboot_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080

    # -----------------------------
    # xDS control plane (optional)
    # -----------------------------
    - name: xds_cluster
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN

      http2_protocol_options: {}

      load_assignment:
        cluster_name: xds_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 5678
